--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
-
-<%= flash[:complete] %>
-<p id="notice"><%= notice %></p>
+<% if flash[:notice] %>
+	<p><%= flash[:notice] %></p>
+<% end %>
 
 <body>
 	<p class= "show">
