--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,17 @@
     <%= flash[:notice] %>
   </div>
 <% end %>
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this @book from being saved:</h2>
+
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+         <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <body>
 	<h1>Editing Book</h1>
 	<%= form_for(@book) do |f| %>
