--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+	<p><%= flash[:notice] %></p>
+<% end %>
 	<body>
 		<h1 class= "header">Books</h1>
 		<table width="55%">
@@ -19,7 +22,18 @@
 
 		<div class="new_form">
 			<h2>New Book</h2>
-			<%= form_for(@book) do |f| %>
+			<% if @book.errors.any? %>
+    		<div id="error_explanation">
+      		<h2><%= pluralize(@book.errors.count, "error") %> prohibited this @book from being saved:</h2>
+
+      		<ul>
+        		<% @book.errors.full_messages.each do |message| %>
+          		<li><%= message %></li>
+        		<% end %>
+      		</ul>
+    		</div>
+  		<% end %>
+    <%= form_for(@book) do |f| %>
 				<div class ="box">
 					<p>Title</p>
 					<%= f.text_field :title %>
