--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] %>
-	<p><%= flash[:notice] %></p>
+	<p class="notice"><%= flash[:notice] %></p>
 <% end %>
 	<body>
 		<h1 class= "header">Books</h1>
