--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,8 @@
+
 <% if flash[:notice] %>
-	<p><%= flash[:notice] %></p>
+	<p class ="notice"><%= flash[:notice] %></p>
 <% end %>
+
 
 <body>
 	<p class= "show">
